--- a/ov.html
+++ b/ov.html
@@ -5,6 +5,11 @@
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
   <link rel="stylesheet" href="/elements/expander/styles.css">
+  <style>
+body {
+  margin: 0;
+}
+  </style>
   <link rel="shortcut icon" href="/favicons/favicon.ico">
   <script src="/elements/expander/script.js"></script>
   <script>
@@ -53,26 +58,26 @@ function init() {
 </head>
 <body onload="init();">
 
-  <h1 id="nw" class="expandable" style="">Nachwuchs<br><br>(U10 U11 U12 U13 U15)</h1>
+  <h1 id="nw" class="expandable" style="">Nachwuchs<br>(U10 U11 U12 U13 U15)</h1>
   <div id="nw_2" class="expanded_container">
 
     <h2 id="u10" class="expandable">U10</h2>
     <div id="u10_2" class="expanded_container">
-      <a id="grundlagen_u10" href="u11#u10"><h3>Grundlagen</h3></a>
+      <a id="grundlagen_u10" href="/u10"><h3>Grundlagen</h3></a>
       <a id="schedule_u10" href="schedule.html?key=u10"><h3>Spieltermine</h3></a>
       <a id="standings_u10" href="standings.html?key=u10"><h3>Tabelle</h3></a>
     </div>
 
     <h2 id="u11" class="expandable">U11</h2>
     <div id="u11_2" class="expanded_container">
-      <a id="grundlagen_u11" href="u11"><h3>Grundlagen</h3></a>
+      <a id="grundlagen_u11" href="/u11"><h3>Grundlagen</h3></a>
       <a id="schedule_u11" href="schedule.html?key=u11"><h3>Spieltermine</h3></a>
       <a id="standings_u11" href="standings.html?key=u11"><h3>Tabelle</h3></a>
     </div>
 
     <h2 id="u12" class="expandable">U12</h2>
     <div id="u12_2" class="expanded_container">
-      <a id="grundlagen_u12" href="u12"><h3>Grundlagen</h3></a>
+      <a id="grundlagen_u12" href="/u12"><h3>Grundlagen</h3></a>
       <a id="schedule_u12" href="schedule.html?key=u12"><h3>Spieltermine</h3></a>
       <a id="standings_u12" href="standings.html?key=u12"><h3>Tabelle</h3></a>
     </div>
@@ -93,7 +98,6 @@ function init() {
 
   </div>
 
-  <br>
   <h1 id="ak" class="expandable"><br>Allgemeine Klasse<br>&nbsp;</h1>
   <div id="ak_2" class="expanded_container">
 
@@ -129,7 +133,6 @@ function init() {
     </div>
   </div>
 
-  <br>
   <h1 id="info" class="expandable"><br>Infos<br>&nbsp;</h1>
   <div id="info_2" class="expanded_container">
     <a id="calendar" href="calendar/calendar.html"><h3>Kalender</h3></a>
