--- a/u12/index.html
+++ b/u12/index.html
@@ -7,98 +7,124 @@
   <link rel="shortcut icon" href="/favicons/favicon.ico">
 </head>
 <body>
-
+  <div id="header"><div class="left">
+<a href="/ov.html#grundlagen_u12"><img src="/image/logo.png"/></a>
+<div>Grundlagen</div>
+</div><div class="right">
+<a href="/ov.html#grundlagen_u12"><img src="/image/logo.png"/></a>
+</div>
+</div>
   <h1 class="tactics">Annahme</h1>
-  <table class="tactics" align="center" cellspacing="0" cellpadding="10">
-    <tr>
-      <td><a href="/imageview.html?u12/annahme.png"><img src="annahme.png" alt="Die Annahme"></a></td>
-    </tr>
-    <tr>
-      <td><a href="/imageview.html?u12/annahme.png"><div>Die Annahme des gegnerischen Service.</div></a></td>
-    </tr>
-  </table>
+<table class="tactics" align="center" cellspacing="0" cellpadding="10">
+  <tr>
+    <td><a id="2er_riegel" href="/imageview.html?i=u12%2F2er_riegel.png&t=2er%20Riegel&x=Die%20Annahme%20des%20gegnerischen%20Service.&b=%2Fu12%232er_riegel"><h3>2er Riegel</h3></a></td>
 
-  <h1 class="tactics">Aufspiel</h1>
-  <table class="tactics" align="center" cellspacing="0" cellpadding="10">
-    <tr>
-      <td><a href="/imageview.html?u12/aufspiel.png"><img src="aufspiel.png" alt="Das Aufspiel"></a></td>
-    </tr>
-    <tr>
-      <td><a href="/imageview.html?u12/aufspiel.png"><div>Das Aufspiel und die Vorbereitung auf den eigenen Angriff.</div></a></td>
-    </tr>
-  </table>
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=u12%2F2er_riegel.png&t=2er%20Riegel&x=Die%20Annahme%20des%20gegnerischen%20Service.&b=%2Fu12%232er_riegel"><img src="2er_riegel.png" alt="2er Riegel"></a></td>
 
-  <h1 class="tactics">Angriff</h1>
-  <table class="tactics" align="center" cellspacing="0" cellpadding="10">
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=u12%2F2er_riegel.png&t=2er%20Riegel&x=Die%20Annahme%20des%20gegnerischen%20Service.&b=%2Fu12%232er_riegel"><div>Die Annahme des gegnerischen Service.</div></a></td>
 
-    <tr>
-      <td><a href="/imageview.html?u12/angriff4.png"><h3>Links:<br>Position 4</h3></a></td>
-      <td><a href="/imageview.html?u12/angriff2.png"><h3>Rechts:<br>Position 2</h3></a></td>
-    </tr>
+  </tr>
+</table>
 
-    <tr>
-      <td><a href="/imageview.html?u12/angriff4.png"><img src="angriff4.png" alt="Angriff Pos 4"></a></td>
-      <td><a href="/imageview.html?u12/angriff2.png"><img src="angriff2.png" alt="Angriff Pos 2"></a></td>
-    </tr>
+<h1 class="tactics">Aufspiel + Angriffsvorbereitung</h1>
+<table class="tactics" align="center" cellspacing="0" cellpadding="10">
+  <tr>
+    <td><a id="aufspiel" href="/imageview.html?i=u12%2Faufspiel.png&t=Aufspiel&x=Das%20Aufspiel%20und%20die%20Vorbereitung%20auf%20den%20eigenen%20Angriff.&b=%2Fu12%23aufspiel"><h3>Aufspiel</h3></a></td>
 
-    <tr>
-      <td><a href="/imageview.html?u12/angriff4.png"><div>Der Angriff über die Position 4 mit Sicherung.</div></a></td>
-      <td><a href="/imageview.html?u12/angriff2.png"><div>Der Angriff über die Position 2 mit Sicherung.</div></a></td>
-    </tr>
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=u12%2Faufspiel.png&t=Aufspiel&x=Das%20Aufspiel%20und%20die%20Vorbereitung%20auf%20den%20eigenen%20Angriff.&b=%2Fu12%23aufspiel"><img src="aufspiel.png" alt="Aufspiel"></a></td>
 
-  </table>
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=u12%2Faufspiel.png&t=Aufspiel&x=Das%20Aufspiel%20und%20die%20Vorbereitung%20auf%20den%20eigenen%20Angriff.&b=%2Fu12%23aufspiel"><div>Das Aufspiel und die Vorbereitung auf den eigenen Angriff.</div></a></td>
 
-  <h1 class="tactics">Basis</h1>
-  <table class="tactics" align="center" cellspacing="0" cellpadding="10">
-    <tr>
-      <td><a href="/imageview.html?u12/basis.png"><img src="basis.png" alt="Die Basis"></a></td>
-    </tr>
-    <tr>
-      <td><a href="/imageview.html?u12/basis.png"><div>Wir gehen in die Basis, sobald der Ball beim Gegner ist.</div></a></td>
-    </tr>
-  </table>
+  </tr>
+</table>
 
-  <h1 class="tactics">Verteidigung (mit Block)</h1>
-  <table class="tactics" align="center" cellspacing="0" cellpadding="10">
-    <tr>
-      <td><a href="/imageview.html?u12/block4.png"><h3>Links:<br>Position 4</h3></a></td>
-      <td><a href="/imageview.html?u12/block3.png"><h3>Mitte:<br>Position 3</h3></a></td>
-      <td><a href="/imageview.html?u12/block2.png"><h3>Rechts:<br>Position 2</h3></a></td>
-    </tr>
+<h1 class="tactics">Angriff + Sicherung</h1>
+<table class="tactics" align="center" cellspacing="0" cellpadding="10">
+  <tr>
+    <td><a id="angriff4" href="/imageview.html?i=u12%2Fangriff4.png&t=Links%3A%20Position%204&x=Der%20Angriff%20%C3%BCber%20die%20Position%204%20mit%20Sicherung.&b=%2Fu12%23angriff4"><h3>Links: Position 4</h3></a></td>
+<td><a id="angriff2" href="/imageview.html?i=u12%2Fangriff2.png&t=Rechts%3A%20Position%202&x=Der%20Angriff%20%C3%BCber%20die%20Position%202%20mit%20Sicherung.&b=%2Fu12%23angriff2"><h3>Rechts: Position 2</h3></a></td>
 
-    <tr>
-      <td><a href="/imageview.html?u12/block4.png"><img src="block4.png" alt="Block Pos 4"></a></td>
-      <td><a href="/imageview.html?u12/block3.png"><img src="block3.png" alt="Block Pos 3"></a></td>
-      <td><a href="/imageview.html?u12/block2.png"><img src="block2.png" alt="Block Pos 2"></a></td>
-    </tr>
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=u12%2Fangriff4.png&t=Links%3A%20Position%204&x=Der%20Angriff%20%C3%BCber%20die%20Position%204%20mit%20Sicherung.&b=%2Fu12%23angriff4"><img src="angriff4.png" alt="Links: Position 4"></a></td>
+<td><a href="/imageview.html?i=u12%2Fangriff2.png&t=Rechts%3A%20Position%202&x=Der%20Angriff%20%C3%BCber%20die%20Position%202%20mit%20Sicherung.&b=%2Fu12%23angriff2"><img src="angriff2.png" alt="Rechts: Position 2"></a></td>
 
-    <tr>
-      <td><a href="/imageview.html?u12/block4.png"><div>Der Block auf der Position 4 gegen einen gegnerischen Angriff.</div></a></td>
-      <td><a href="/imageview.html?u12/block3.png"><div>Der Block auf der Position 3 gegen einen gegnerischen Angriff.</div></a></td>
-      <td><a href="/imageview.html?u12/block2.png"><div>Der Block auf der Position 2 gegen einen gegnerischen Angriff.</div></a></td>
-    </tr>
-  </table>
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=u12%2Fangriff4.png&t=Links%3A%20Position%204&x=Der%20Angriff%20%C3%BCber%20die%20Position%204%20mit%20Sicherung.&b=%2Fu12%23angriff4"><div>Der Angriff über die Position 4 mit Sicherung.</div></a></td>
+<td><a href="/imageview.html?i=u12%2Fangriff2.png&t=Rechts%3A%20Position%202&x=Der%20Angriff%20%C3%BCber%20die%20Position%202%20mit%20Sicherung.&b=%2Fu12%23angriff2"><div>Der Angriff über die Position 2 mit Sicherung.</div></a></td>
 
-  <h1 class="tactics">Verteidigung (ohne Block)</h1>
-  <table class="tactics" align="center" cellspacing="0" cellpadding="10">
-    <tr>
-      <td><a href="/imageview.html?u12/ohne4.png"><h3>Links:<br>Position 4</h3></a></td>
-      <td><a href="/imageview.html?u12/ohne3.png"><h3>Mitte:<br>Position 3</h3></a></td>
-      <td><a href="/imageview.html?u12/ohne2.png"><h3>Rechts:<br>Position 2</h3></a></td>
-    </tr>
+  </tr>
+</table>
 
-    <tr>
-      <td><a href="/imageview.html?u12/ohne4.png"><img src="ohne4.png" alt="Ohne - Pos 4"></a></td>
-      <td><a href="/imageview.html?u12/ohne3.png"><img src="ohne3.png" alt="Ohne - Pos 3 (links)"></a></td>
-      <td><a href="/imageview.html?u12/ohne2.png"><img src="ohne2.png" alt="Ohne - Pos 2"></a></td>
-    </tr>
+<h1 class="tactics">Basis</h1>
+<table class="tactics" align="center" cellspacing="0" cellpadding="10">
+  <tr>
+    <td><a id="basis" href="/imageview.html?i=u12%2Fbasis.png&t=Basis&x=Wir%20gehen%20in%20die%20Basis%2C%20sobald%20der%20Ball%20beim%20Gegner%20ist.&b=%2Fu12%23basis"><h3>Basis</h3></a></td>
 
-    <tr>
-      <td><a href="/imageview.html?u12/ohne4.png"><div>Geschenkter Ball bei Position 4.</div></a></td>
-      <td><a href="/imageview.html?u12/ohne3.png"><div>Geschenkter Ball bei Position 3.</div></a></td>
-      <td><a href="/imageview.html?u12/ohne2.png"><div>Geschenkter Ball bei Position 2.</div></a></td>
-    </tr>
-  </table>
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=u12%2Fbasis.png&t=Basis&x=Wir%20gehen%20in%20die%20Basis%2C%20sobald%20der%20Ball%20beim%20Gegner%20ist.&b=%2Fu12%23basis"><img src="basis.png" alt="Basis"></a></td>
+
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=u12%2Fbasis.png&t=Basis&x=Wir%20gehen%20in%20die%20Basis%2C%20sobald%20der%20Ball%20beim%20Gegner%20ist.&b=%2Fu12%23basis"><div>Wir gehen in die Basis, sobald der Ball beim Gegner ist.</div></a></td>
+
+  </tr>
+</table>
+
+<h1 class="tactics">Verteidigung (mit Block)</h1>
+<table class="tactics" align="center" cellspacing="0" cellpadding="10">
+  <tr>
+    <td><a id="block4" href="/imageview.html?i=u12%2Fblock4.png&t=Links%3A%20Position%204&x=Der%20Block%20auf%20der%20Position%204%20gegen%20einen%20gegnerischen%20Angriff.&b=%2Fu12%23block4"><h3>Links: Position 4</h3></a></td>
+<td><a id="block3" href="/imageview.html?i=u12%2Fblock3.png&t=Mitte%3A%20Position%203&x=Der%20Block%20auf%20der%20Position%203%20gegen%20einen%20gegnerischen%20Angriff.&b=%2Fu12%23block3"><h3>Mitte: Position 3</h3></a></td>
+<td><a id="block2" href="/imageview.html?i=u12%2Fblock2.png&t=Rechts%3A%20Position%202&x=Der%20Block%20auf%20der%20Position%202%20gegen%20einen%20gegnerischen%20Angriff.&b=%2Fu12%23block2"><h3>Rechts: Position 2</h3></a></td>
+
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=u12%2Fblock4.png&t=Links%3A%20Position%204&x=Der%20Block%20auf%20der%20Position%204%20gegen%20einen%20gegnerischen%20Angriff.&b=%2Fu12%23block4"><img src="block4.png" alt="Links: Position 4"></a></td>
+<td><a href="/imageview.html?i=u12%2Fblock3.png&t=Mitte%3A%20Position%203&x=Der%20Block%20auf%20der%20Position%203%20gegen%20einen%20gegnerischen%20Angriff.&b=%2Fu12%23block3"><img src="block3.png" alt="Mitte: Position 3"></a></td>
+<td><a href="/imageview.html?i=u12%2Fblock2.png&t=Rechts%3A%20Position%202&x=Der%20Block%20auf%20der%20Position%202%20gegen%20einen%20gegnerischen%20Angriff.&b=%2Fu12%23block2"><img src="block2.png" alt="Rechts: Position 2"></a></td>
+
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=u12%2Fblock4.png&t=Links%3A%20Position%204&x=Der%20Block%20auf%20der%20Position%204%20gegen%20einen%20gegnerischen%20Angriff.&b=%2Fu12%23block4"><div>Der Block auf der Position 4 gegen einen gegnerischen Angriff.</div></a></td>
+<td><a href="/imageview.html?i=u12%2Fblock3.png&t=Mitte%3A%20Position%203&x=Der%20Block%20auf%20der%20Position%203%20gegen%20einen%20gegnerischen%20Angriff.&b=%2Fu12%23block3"><div>Der Block auf der Position 3 gegen einen gegnerischen Angriff.</div></a></td>
+<td><a href="/imageview.html?i=u12%2Fblock2.png&t=Rechts%3A%20Position%202&x=Der%20Block%20auf%20der%20Position%202%20gegen%20einen%20gegnerischen%20Angriff.&b=%2Fu12%23block2"><div>Der Block auf der Position 2 gegen einen gegnerischen Angriff.</div></a></td>
+
+  </tr>
+</table>
+
+<h1 class="tactics">Verteidigung (ohne Block)</h1>
+<table class="tactics" align="center" cellspacing="0" cellpadding="10">
+  <tr>
+    <td><a id="ohne4" href="/imageview.html?i=u12%2Fohne4.png&t=Links%3A%20Position%204&x=Geschenkter%20Ball%20bei%20Position%204.&b=%2Fu12%23ohne4"><h3>Links: Position 4</h3></a></td>
+<td><a id="ohne3" href="/imageview.html?i=u12%2Fohne3.png&t=Mitte%3A%20Position%203&x=Geschenkter%20Ball%20bei%20Position%203.&b=%2Fu12%23ohne3"><h3>Mitte: Position 3</h3></a></td>
+<td><a id="ohne2" href="/imageview.html?i=u12%2Fohne2.png&t=Rechts%3A%20Position%202&x=Geschenkter%20Ball%20bei%20Position%202.&b=%2Fu12%23ohne2"><h3>Rechts: Position 2</h3></a></td>
+
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=u12%2Fohne4.png&t=Links%3A%20Position%204&x=Geschenkter%20Ball%20bei%20Position%204.&b=%2Fu12%23ohne4"><img src="ohne4.png" alt="Links: Position 4"></a></td>
+<td><a href="/imageview.html?i=u12%2Fohne3.png&t=Mitte%3A%20Position%203&x=Geschenkter%20Ball%20bei%20Position%203.&b=%2Fu12%23ohne3"><img src="ohne3.png" alt="Mitte: Position 3"></a></td>
+<td><a href="/imageview.html?i=u12%2Fohne2.png&t=Rechts%3A%20Position%202&x=Geschenkter%20Ball%20bei%20Position%202.&b=%2Fu12%23ohne2"><img src="ohne2.png" alt="Rechts: Position 2"></a></td>
+
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=u12%2Fohne4.png&t=Links%3A%20Position%204&x=Geschenkter%20Ball%20bei%20Position%204.&b=%2Fu12%23ohne4"><div>Geschenkter Ball bei Position 4.</div></a></td>
+<td><a href="/imageview.html?i=u12%2Fohne3.png&t=Mitte%3A%20Position%203&x=Geschenkter%20Ball%20bei%20Position%203.&b=%2Fu12%23ohne3"><div>Geschenkter Ball bei Position 3.</div></a></td>
+<td><a href="/imageview.html?i=u12%2Fohne2.png&t=Rechts%3A%20Position%202&x=Geschenkter%20Ball%20bei%20Position%202.&b=%2Fu12%23ohne2"><div>Geschenkter Ball bei Position 2.</div></a></td>
+
+  </tr>
+</table>
+
 
 </body>
 </html>
