--- a/uld/grundlagen/index.html
+++ b/uld/grundlagen/index.html
@@ -4,38 +4,35 @@
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
-  <style>
-body {
-  margin: 60px 0 0 0;
-}
-  </style>
   <link rel="shortcut icon" href="/favicons/favicon.ico">
 </head>
 <body>
-
-  <div id="header">
-  <a href="/ov.html#grundlagen_br4" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
-  <div class="title">Grundlagen</div>
-  <a href="/ov.html#grundlagen_br4" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
-  </div>
-
+  <div id="header"><div class="left">
+<a href="/ov.html#grundlagen_br4"><img src="/image/logo.png"/></a>
+<div>Grundlagen</div>
+</div><div class="right">
+<a href="/ov.html#grundlagen_br4"><img src="/image/logo.png"/></a>
+</div>
+</div>
   <h1 class="tactics">Grundlagen</h1>
-  <table class="tactics" align="center" cellspacing="0" cellpadding="10">
+<table class="tactics" align="center" cellspacing="0" cellpadding="10">
+  <tr>
+    <td><a id="spielfeld" href="/imageview.html?i=uld%2Fgrundlagen%2Fspielfeld.png&t=Spielfeld&x=Das%20Spielfeld.&b=%2Fuld%2Fgrundlagen%23spielfeld"><h3>Spielfeld</h3></a></td>
+<td><a id="positionen" href="/imageview.html?i=uld%2Fgrundlagen%2Fpositionen.png&t=Positionen&x=Die%20Positionen%20der%20Spielerinnen.&b=%2Fuld%2Fgrundlagen%23positionen"><h3>Positionen</h3></a></td>
 
-    <tr>
-      <td><a href="/imageview.html?uld/grundlagen/spielfeld.png"><h3>Spielfeld</h3></a></td>
-      <td><a href="/imageview.html?uld/grundlagen/positionen.png"><h3>Positionen</h3></a></td>
-    </tr>
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=uld%2Fgrundlagen%2Fspielfeld.png&t=Spielfeld&x=Das%20Spielfeld.&b=%2Fuld%2Fgrundlagen%23spielfeld"><img src="spielfeld.png" alt="Spielfeld"></a></td>
+<td><a href="/imageview.html?i=uld%2Fgrundlagen%2Fpositionen.png&t=Positionen&x=Die%20Positionen%20der%20Spielerinnen.&b=%2Fuld%2Fgrundlagen%23positionen"><img src="positionen.png" alt="Positionen"></a></td>
 
-    <tr>
-      <td><a href="/imageview.html?uld/grundlagen/spielfeld.png"><img src="spielfeld.png" alt="Spielfeld"></a></td>
-      <td><a href="/imageview.html?uld/grundlagen/positionen.png"><img src="positionen.png" alt="Positionen"></a></td>
-    </tr>
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=uld%2Fgrundlagen%2Fspielfeld.png&t=Spielfeld&x=Das%20Spielfeld.&b=%2Fuld%2Fgrundlagen%23spielfeld"><div>Das Spielfeld.</div></a></td>
+<td><a href="/imageview.html?i=uld%2Fgrundlagen%2Fpositionen.png&t=Positionen&x=Die%20Positionen%20der%20Spielerinnen.&b=%2Fuld%2Fgrundlagen%23positionen"><div>Die Positionen der Spielerinnen.</div></a></td>
 
-    <tr>
-      <td><a href="/imageview.html?uld/grundlagen/spielfeld.png"><div>Das Spielfeld.</div></a></td>
-      <td><a href="/imageview.html?uld/grundlagen/positionen.png"><div>Die Positionen der Spielerinnen.</div></a></td>
-    </tr>
-  </table>
+  </tr>
+</table>
+
+
 </body>
 </html>
