--- a/uld/grundlagen3/aufspiel/index.html
+++ b/uld/grundlagen3/aufspiel/index.html
@@ -7,8 +7,8 @@
   <style>
 *, html, body {
   margin: 0;
-  padding: 0px;
-  border: 0px none;
+  padding: 0;
+  border: 0 none;
   overflow: hidden;
   background-color: #DDD;
   -moz-user-select: none;
