--- a/u11/index.html
+++ b/u11/index.html
@@ -5,68 +5,50 @@
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
   <link rel="shortcut icon" href="/favicons/favicon.ico">
-  <style>
-body {
-  margin: 60px 0 0 0;
-}
-  </style>
-  <script>
-function init() {
-  if (location.hash.toLowerCase() === '#u10') {
-    var i,
-        lnks = document.querySelectorAll('div#header > a');
-    if (lnks) {
-      for (i = 0; i < lnks.length; ++i) {
-        lnks[i].setAttribute('href', lnks[i].getAttribute('href').replace('_u11', '_u10'));
-      }
-    }
-  }
-}
-  </script>
 </head>
-<body onload="init();">
-  <div id="header">
-  <a href="/ov.html#grundlagen_u11" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
-  <div class="title">Grundlagen</div>
-  <a href="/ov.html#grundlagen_u11" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
-  </div>
-
+<body>
+  <div id="header"><div class="left">
+<a href="/ov.html#grundlagen_u11"><img src="/image/logo.png"/></a>
+<div>Grundlagen</div>
+</div><div class="right">
+<a href="/ov.html#grundlagen_u11"><img src="/image/logo.png"/></a>
+</div>
+</div>
   <h1 class="tactics">Annahme und Verteidigung</h1>
-  <table class="tactics" align="center" cellspacing="0" cellpadding="10">
-    <tr>
-      <td><a id="2x_spielen" href="2x_spielen.html"><h3>2x Spielen</h3></a></td>
-    </tr>
-    <tr>
-      <td><a href="2x_spielen.html"><img src="2x_spielen.png" alt="2x spielen"></a></td>
-    </tr>
-  </table>
+<table class="tactics" align="center" cellspacing="0" cellpadding="10">
+  <tr>
+    <td><a id="2x_spielen" href="2x_spielen.html"><h3>2x Spielen</h3></a></td>
+<td><a id="aussenfuss" href="aussenfuss.html"><h3>Außenfuß</h3></a></td>
+<td><a id="ich_zu_mir" href="ich_zu_mir.html"><h3>Ich!  Zu mir!</h3></a></td>
 
-  <table class="tactics" align="center" cellspacing="0" cellpadding="10">
-    <tr>
-      <td><a id="aussenfuss" href="aussenfuss.html"><h3>Außenfuß</h3></a></td>
-      <td><a id="ich_zu_mir" href="ich_zu_mir.html"><h3>Ich!&nbsp; Zu mir!</h3></a></td>
-    </tr>
-    <tr>
-      <td><a href="aussenfuss.html"><img src="aussenfuss.png" alt="Außenfuß"></a></td>
-      <td><a href="ich_zu_mir.html"><img src="ich_zu_mir.png" alt="Ich!  Zu mir!"></a></td>
-    </tr>
-  </table>
+  </tr>
+  <tr>
+    <td><a href="2x_spielen.html"><img src="2x_spielen.png" alt="2x Spielen"></a></td>
+<td><a href="aussenfuss.html"><img src="aussenfuss.png" alt="Außenfuß"></a></td>
+<td><a href="ich_zu_mir.html"><img src="ich_zu_mir.png" alt="Ich!  Zu mir!"></a></td>
+
+  </tr>
+</table>
+
+<h1 class="tactics">Angriff</h1>
+<table class="tactics" align="center" cellspacing="0" cellpadding="10">
+  <tr>
+    <td><a id="tomjerry" href="/imageview.html?i=u11%2Ftomjerry.png&t=Tom%20%2B%20Jerry&x=Kurze%20Angriffe%20vor%20die%20F%C3%BC%C3%9Fe%20der%20Gegnerin.&b=%2Fu11%23tomjerry"><h3>Tom + Jerry</h3></a></td>
+<td><a id="mickymaus" href="/imageview.html?i=u11%2Fmickymaus.png&t=Micky%20Maus&x=Angriffe%20zwischen%20die%20gegnerischen%20Spielerinnen.&b=%2Fu11%23mickymaus"><h3>Micky Maus</h3></a></td>
+
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=u11%2Ftomjerry.png&t=Tom%20%2B%20Jerry&x=Kurze%20Angriffe%20vor%20die%20F%C3%BC%C3%9Fe%20der%20Gegnerin.&b=%2Fu11%23tomjerry"><img src="tomjerry.png" alt="Tom + Jerry"></a></td>
+<td><a href="/imageview.html?i=u11%2Fmickymaus.png&t=Micky%20Maus&x=Angriffe%20zwischen%20die%20gegnerischen%20Spielerinnen.&b=%2Fu11%23mickymaus"><img src="mickymaus.png" alt="Micky Maus"></a></td>
+
+  </tr>
+  <tr>
+    <td><a href="/imageview.html?i=u11%2Ftomjerry.png&t=Tom%20%2B%20Jerry&x=Kurze%20Angriffe%20vor%20die%20F%C3%BC%C3%9Fe%20der%20Gegnerin.&b=%2Fu11%23tomjerry"><div>Kurze Angriffe vor die Füße der Gegnerin.</div></a></td>
+<td><a href="/imageview.html?i=u11%2Fmickymaus.png&t=Micky%20Maus&x=Angriffe%20zwischen%20die%20gegnerischen%20Spielerinnen.&b=%2Fu11%23mickymaus"><div>Angriffe zwischen die gegnerischen Spielerinnen.</div></a></td>
+
+  </tr>
+</table>
 
 
-  <h1 class="tactics">Angriff</h1>
-  <table class="tactics" align="center" cellspacing="0" cellpadding="10">
-    <tr>
-      <td><a id="tomjerry" href="/imageview.html?u11/image/tomjerry.png"><h3>Tom + Jerry</h3></a></td>
-      <td><a id="mickymaus" href="/imageview.html?u11/image/mickymaus.png"><h3>Micky Maus</h3></a></td>
-    </tr>
-    <tr>
-      <td><a href="/imageview.html?u11/image/tomjerry.png"><img src="image/tomjerry.png" alt="Angriff Tom & Jerry"></a></td>
-      <td><a href="/imageview.html?u11/image/mickymaus.png"><img src="image/mickymaus.png" alt="Angriff Micky Maus"></a></td>
-    </tr>
-    <tr>
-      <td><a href="/imageview.html?u11/image/tomjerry.png"><div>Kurze Angriffe vor die Füße der Gegnerin.</div></a></td>
-      <td><a href="/imageview.html?u11/image/mickymaus.png"><div>Angriffe zwischen die gegnerischen Spielerinnen.</div></a></td>
-    </tr>
-  </table>
 </body>
 </html>
